try custom gallery slider

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -204,14 +204,24 @@
 				<!-- Custom slider -->
 				<div class="gallery-slider">
 					<div class="gallery-slider-inner">
-						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg">
 					</div>
 				</div>
 			</div>
