try custom gallery slider

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -204,24 +204,16 @@
 				<!-- Custom slider -->
 				<div class="gallery-slider">
 					<div class="gallery-slider-inner">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
-						<img src="img/placeholder.jpg">
+						<img src="img/placeholder.jpg" style="width: 200px">
+						<img src="img/placeholder.jpg" style="width: 200px">
+						<img src="img/placeholder.jpg" style="width: 200px">
+						<img src="img/placeholder.jpg" style="width: 200px">
+						<img src="img/placeholder.jpg" style="width: 200px">
+						<img src="img/placeholder.jpg" style="width: 200px">
+						<img src="img/placeholder.jpg" style="width: 200px">
+						<img src="img/placeholder.jpg" style="width: 200px">
+						<img src="img/placeholder.jpg" style="width: 200px">
+						<img src="img/placeholder.jpg" style="width: 200px">
 					</div>
 				</div>
 			</div>
