try custom slider

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -144,7 +144,7 @@
 	</style>
 </head>
 
-<body  style="font-family: Roboto">
+<body style="font-family: Roboto">
 
 	<script src="js/navbar_bg_white.js"></script>
 
@@ -202,18 +202,20 @@
 				</div>
 
 				<!-- Custom slider -->
-				<div class="gallery-slider">
-					<div class="gallery-slider-inner">
-						<img src="img/placeholder.jpg" style="width: 200px">
-						<img src="img/placeholder.jpg" style="width: 200px">
-						<img src="img/placeholder.jpg" style="width: 200px">
-						<img src="img/placeholder.jpg" style="width: 200px">
-						<img src="img/placeholder.jpg" style="width: 200px">
-						<img src="img/placeholder.jpg" style="width: 200px">
-						<img src="img/placeholder.jpg" style="width: 200px">
-						<img src="img/placeholder.jpg" style="width: 200px">
-						<img src="img/placeholder.jpg" style="width: 200px">
-						<img src="img/placeholder.jpg" style="width: 200px">
+				<div class="container">
+					<div class="gallery-slider">
+						<div class="gallery-slider-inner">
+							<img src="img/placeholder.jpg" style="width: 200px">
+							<img src="img/placeholder.jpg" style="width: 200px">
+							<img src="img/placeholder.jpg" style="width: 200px">
+							<img src="img/placeholder.jpg" style="width: 200px">
+							<img src="img/placeholder.jpg" style="width: 200px">
+							<img src="img/placeholder.jpg" style="width: 200px">
+							<img src="img/placeholder.jpg" style="width: 200px">
+							<img src="img/placeholder.jpg" style="width: 200px">
+							<img src="img/placeholder.jpg" style="width: 200px">
+							<img src="img/placeholder.jpg" style="width: 200px">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -292,7 +294,7 @@
 				$("#event-venue").html(event.venue);
 				$("#event-time").html(event.time);
 				$("#event-content").html(event.content);
-				$("#event-pic").attr("src",picURL + `/${event.flyer}`);
+				$("#event-pic").attr("src", picURL + `/${event.flyer}`);
 			});
 
 			//gallery
