try custom slider

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -204,18 +204,25 @@
 				<!-- Custom slider -->
 				<div class="container">
 					<div class="gallery-slider">
-						<div class="gallery-slider-inner">
-							<img src="img/placeholder.jpg" style="width: 200px">
-							<img src="img/placeholder.jpg" style="width: 200px">
-							<img src="img/placeholder.jpg" style="width: 200px">
-							<img src="img/placeholder.jpg" style="width: 200px">
-							<img src="img/placeholder.jpg" style="width: 200px">
-							<img src="img/placeholder.jpg" style="width: 200px">
-							<img src="img/placeholder.jpg" style="width: 200px">
-							<img src="img/placeholder.jpg" style="width: 200px">
-							<img src="img/placeholder.jpg" style="width: 200px">
-							<img src="img/placeholder.jpg" style="width: 200px">
+						<div class="gallery-slider-controls">
+							<div class="control-left"><i>&lt;</i></div>
+							<div class="control-right"><i>&gt;</i></div>
 						</div>
+						<div class="gallery-slider-wrapper">
+							<div class="gallery-slider-inner">
+								<img src="img/placeholder.jpg" style="width: 200px">
+								<img src="img/placeholder.jpg" style="width: 200px">
+								<img src="img/placeholder.jpg" style="width: 200px">
+								<img src="img/placeholder.jpg" style="width: 200px">
+								<img src="img/placeholder.jpg" style="width: 200px">
+								<img src="img/placeholder.jpg" style="width: 200px">
+								<img src="img/placeholder.jpg" style="width: 200px">
+								<img src="img/placeholder.jpg" style="width: 200px">
+								<img src="img/placeholder.jpg" style="width: 200px">
+								<img src="img/placeholder.jpg" style="width: 200px">
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
