--- a/eventdetail.html
+++ b/eventdetail.html
@@ -205,8 +205,8 @@
 				<div class="container">
 					<div class="gallery-slider">
 						<div class="gallery-slider-controls">
-							<div class="control-left"><i>&lt;</i></div>
-							<div class="control-right"><i>&gt;</i></div>
+							<span class="control-left"><i>&lt;</i></span>
+							<span class="control-right"><i>&gt;</i></span>
 						</div>
 						<div class="gallery-slider-wrapper">
 							<div class="gallery-slider-inner">
