try custom slider

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -204,7 +204,7 @@
 				<!-- Custom slider -->
 				<div class="container">
 					<div class="gallery-slider">
-						<div class="gallery-slider-controls">
+						<div class="gallery-slider-control">
 							<span class="control-left"><i>&lt;</i></span>
 							<span class="control-right"><i>&gt;</i></span>
 						</div>
