try custom slider

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -204,10 +204,11 @@
 				<!-- Custom slider -->
 				<div class="container">
 					<div class="gallery-slider">
-						<span class="control-left"><i>&lt;</i></span>
-						<span class="control-right"><i>&gt;</i></span>
-
-						<div class="gallery-slider-wrapper">
+						
+						<div class="col-sm-1">
+							&lt;
+						</div>
+						<div class="gallery-slider-wrapper col-sm-10">
 							<div class="gallery-slider-inner">
 								<img src="img/placeholder.jpg" style="width: 200px">
 								<img src="img/placeholder.jpg" style="width: 200px">
@@ -220,6 +221,9 @@
 								<img src="img/placeholder.jpg" style="width: 200px">
 								<img src="img/placeholder.jpg" style="width: 200px">
 							</div>
+						</div>
+						<div class="col-sm-1">
+							&gt;
 						</div>
 
 					</div>
