--- a/eventdetail.html
+++ b/eventdetail.html
@@ -205,7 +205,7 @@
 				<div class="container">
 					<div class="gallery-slider">
 						
-						<div class="col-sm-1">
+						<div class="col-sm-1 text-center gallery-slider-control">
 							&lt;
 						</div>
 						<div class="gallery-slider-wrapper col-sm-10">
@@ -222,7 +222,7 @@
 								<img src="img/placeholder.jpg" style="width: 200px">
 							</div>
 						</div>
-						<div class="col-sm-1">
+						<div class="col-sm-1 text-center gallery-slider-control">
 							&gt;
 						</div>
 
