--- a/eventdetail.html
+++ b/eventdetail.html
@@ -206,7 +206,7 @@
 					<div class="gallery-slider">
 						
 						<div class="col-sm-1 text-center gallery-slider-control">
-							&lt;
+							<i class="fa fa-chevron-left"></i>
 						</div>
 						<div class="gallery-slider-wrapper col-sm-10">
 							<div class="gallery-slider-inner">
@@ -223,7 +223,7 @@
 							</div>
 						</div>
 						<div class="col-sm-1 text-center gallery-slider-control">
-							&gt;
+							<i class="fa fa-chevron-right">
 						</div>
 
 					</div>
