try custom slider

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -223,7 +223,7 @@
 							</div>
 						</div>
 						<div class="col-sm-1 text-center gallery-slider-control">
-							<i class="fa fa-chevron-right">
+							<i class="fa fa-chevron-right"></i>
 						</div>
 
 					</div>
