try custom slider

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -210,16 +210,16 @@
 						</div>
 						<div class="gallery-slider-wrapper col-sm-10">
 							<div class="gallery-slider-inner">
-								<img src="img/placeholder.jpg" style="width: 200px">
-								<img src="img/placeholder.jpg" style="width: 200px">
-								<img src="img/placeholder.jpg" style="width: 200px">
-								<img src="img/placeholder.jpg" style="width: 200px">
-								<img src="img/placeholder.jpg" style="width: 200px">
-								<img src="img/placeholder.jpg" style="width: 200px">
-								<img src="img/placeholder.jpg" style="width: 200px">
-								<img src="img/placeholder.jpg" style="width: 200px">
-								<img src="img/placeholder.jpg" style="width: 200px">
-								<img src="img/placeholder.jpg" style="width: 200px">
+								<img src="img/placeholder.jpg">
+								<img src="img/placeholder.jpg">
+								<img src="img/placeholder.jpg">
+								<img src="img/placeholder.jpg">
+								<img src="img/placeholder.jpg">
+								<img src="img/placeholder.jpg">
+								<img src="img/placeholder.jpg">
+								<img src="img/placeholder.jpg">
+								<img src="img/placeholder.jpg">
+								<img src="img/placeholder.jpg">
 							</div>
 						</div>
 						<div class="col-sm-1 text-center gallery-slider-control control-right">
