--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<section id="portfolio">
 			<div class="container wow fadeInUp row-center">
 				<div class="section-header">
-					<h3 class="section-title">Curated Collection</h3>
+					<h3 class="section-title">Curators' Recommendations</h3>
 				</div>
 
 				<div class="row" id="portfolio-wrapper">
@@ -127,7 +127,7 @@
 		</section>
 		<section id="team">
 			<div class="container wow fadeInUp">
-				<div class="section-header">
+				<!-- <div class="section-header">
 					<h3 class="section-title">
 						What is Masha Support?</h3>
 					<hr style="width:75vw; height:2px; background: black;" />
@@ -145,7 +145,7 @@
 						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
 
 					</p>
-				</div>
+				</div> -->
 				<div class="row">
 					<div class="col-lg-3 col-md-6">
 						<div class="member">
