add others option in handicrafts

--- a/Gallery.html
+++ b/Gallery.html
@@ -49,6 +49,7 @@
 						<div class="options">
 							<a href="#" class="selected">Shawls</a>
 							<a href="#">Carpets</a>
+							<a href="#">Others</a>
 						</div>
 					</div>
 				</div>
