ts: remove wow and fade up

--- a/Gallery.html
+++ b/Gallery.html
@@ -75,7 +75,7 @@
 
 			</div>
 
-			<div class="wow fadeInUp" style="width: 100vw; display: none;" id="allArtistsContainer">
+			<div  style="width: 100vw; display: none;" id="allArtistsContainer">
 				<div class="col-sm-3">
 					<h4>Artists</h4>
 				</div>
