reposition all artists

--- a/Gallery.html
+++ b/Gallery.html
@@ -73,16 +73,18 @@
 					</ul>
 				</div>
 
+				<div  class="row" style="width: 100vw; display: none;" id="allArtistsContainer">
+					<div class="col-sm-3">
+						<h4>All Artists</h4>
+					</div>
+					<div class="col-sm-9" id="allArtistsContainer_wrapper">
+	
+					</div>
+				</div>
+
 			</div>
 
-			<div  style="width: 100vw; display: none;" id="allArtistsContainer">
-				<div class="col-sm-3">
-					<h4>Artists</h4>
-				</div>
-				<div class="col-sm-9" id="allArtistsContainer_wrapper">
-
-				</div>
-			</div>
+			
 		</section>
 
 	</main>
