fix artist link

--- a/Gallery.html
+++ b/Gallery.html
@@ -293,7 +293,7 @@
 				data.forEach((artist)=>{
 					$("#allArtistsContainer_wrapper").append(`
 						<div class="col-sm-3">
-							<a href = "artistsdetail.html?artist=${artist.name}">${artist.name}</a>
+							<a href = "artistdetail.html?artist=${artist.name}">${artist.name}</a>
 						</div>
 					`);
 				});
