style all artists list

--- a/Gallery.html
+++ b/Gallery.html
@@ -73,7 +73,7 @@
 					</ul>
 				</div>
 
-				<div  class="row" style="width: 100vw; display: none;" id="allArtistsContainer">
+				<div  class="row" style="display: none;" id="allArtistsContainer">
 					<div class="col-sm-3">
 						<h4>All Artists</h4>
 					</div>
