--- a/Gallery.html
+++ b/Gallery.html
@@ -73,9 +73,9 @@
 					</ul>
 				</div>
 
-				<div  class="row" style="display: none;" id="allArtistsContainer">
+				<div  class="row flex" style="display: none;" id="allArtistsContainer">
 					<div class="col-sm-3">
-						<h4>All Artists</h4>
+						<h3 style="margin-top: auto; margin-bottom: auto;">All Artists</h3>
 					</div>
 					<div class="col-sm-9" id="allArtistsContainer_wrapper">
 	
