--- a/Gallery.html
+++ b/Gallery.html
@@ -75,7 +75,7 @@
 
 				<div  class="row flex" style="display: none;" id="allArtistsContainer">
 					<div class="col-sm-3">
-						<h3 style="margin-top: auto; margin-bottom: auto;">All Artists</h3>
+						<h3 style="position:relative; top:50%;">All Artists</h3>
 					</div>
 					<div class="col-sm-9" id="allArtistsContainer_wrapper">
 	
