wrap portfolio items

--- a/Gallery.html
+++ b/Gallery.html
@@ -195,9 +195,9 @@
 
 				productsList.append(`
 						<div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-app">
-
-							<img src="${urlString}/${product.thumbnail}" alt="" data-url="${productURL}">
-
+							<div style="width: 230px;height: 230px;">
+								<img src="${urlString}/${product.thumbnail}" alt="" data-url="${productURL}">
+							</div>
 							<div style="text-align: center;">
 								<h4>${firstLine.toLowerCase()}</h4>
 								<span class="product-second-line">${secondLine.toLowerCase()}</span><br />
