--- a/Gallery.html
+++ b/Gallery.html
@@ -195,7 +195,7 @@
 
 				productsList.append(`
 						<div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-app">
-							<div style="width: 230px;height: 230px;">
+							<div style="width: 250px;height: 250px; display: inline-grid; border-style: solid; border-width: 1px;">
 								<img src="${urlString}/${product.thumbnail}" alt="" data-url="${productURL}">
 							</div>
 							<div style="text-align: center;">
