--- a/Gallery.html
+++ b/Gallery.html
@@ -45,7 +45,7 @@
 
 				<div class="row">
 					<div class="col-lg-12" id="handicrafts-control" style="display: none;">
-						<h5><b>Handicraft: </b></h5>
+						<h5><b>Handicrafts: </b></h5>
 						<div class="options">
 							<a href="#" class="selected">Shawls</a>
 							<a href="#">Carpets</a>
