change the 3-points

--- a/index.html
+++ b/index.html
@@ -181,40 +181,28 @@
 			<div class="container wow fadeIn">
 
 				<div class="row counters">
-
-					<div class="col-lg-4 col-6 text-center">
-						<span><img src="img/social-care.png"></span>
-						<div>
-							<h5><b>Masha Support</b></h5>
-							<p class="m-sm-top">Masha's mission enables and empowers under-privileged lives to move
-								towards alternate choicesof professions through alluring art exploration.</p>
-
-
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-6 text-center">
-						<span><img src="img/diploma.png"></span>
+					<div class="col-lg-4 col-12 text-center">
+						<span><img src="img/Authencity Icon.png"></span>
 
 						<div>
-							<h5><b>Artist Authenticity Certificate</b></h5>
-							<p>All our art work comes with artist authenticity certificate.</p>
-
+							<h5><b>ARTIST AUTHENTICITY</b></h5>
 						</div>
 					</div>
 
 
 					<div class="col-lg-4 col-12 text-center">
-						<span><img src="img/free-delivery-min-com.png"></span>
+						<span><img src="img/Display Trial Icon.png"></span>
 						<div style="margin-top: -14px;">
-							<h5><b>Free Shipping</b></h5>
-							<p>We offer free shipping for all order, regardless of the total amount of the order.</p>
-
+							<h5><b>ON-SITE DISPLAY AND TRIALS</b></h5>
 						</div>
 					</div>
 
-
-
+					<div class="col-lg-4 col-12 text-center">
+						<span><img src="img/Advisory Icon.png"></span>
+						<div>
+							<h5><b>PERSONALISED ART INVESTMENT ADVISORY</b></h5>
+						</div>
+					</div>
 				</div>
 
 			</div>
