resize 3-point images

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 				<div class="row counters">
 					<div class="col-lg-4 col-12 text-center">
-						<span><img src="img/Authencity Icon.png"></span>
+						<span><img src="img/Authencity Icon.png" style="width: 200px; height: 200px;"></span>
 
 						<div>
 							<h5><b>ARTIST AUTHENTICITY</b></h5>
@@ -191,14 +191,14 @@
 
 
 					<div class="col-lg-4 col-12 text-center">
-						<span><img src="img/Display Trial Icon.png"></span>
-						<div style="margin-top: -14px;">
+						<span><img src="img/Display Trial Icon.png" style="width: 200px; height: 200px;"></span>
+						<div>
 							<h5><b>ON-SITE DISPLAY AND TRIALS</b></h5>
 						</div>
 					</div>
 
 					<div class="col-lg-4 col-12 text-center">
-						<span><img src="img/Advisory Icon.png"></span>
+						<span><img src="img/Advisory Icon.png" style="width: 200px; height: 200px;"></span>
 						<div>
 							<h5><b>PERSONALISED ART INVESTMENT ADVISORY</b></h5>
 						</div>
