add masha support banner

--- a/index.html
+++ b/index.html
@@ -127,50 +127,10 @@
 		</section>
 		<section id="team">
 			<div class="container wow fadeInUp">
-				<!-- <div class="section-header">
-					<h3 class="section-title">
-						What is Masha Support?</h3>
-					<hr style="width:75vw; height:2px; background: black;" />
-					<p class="section-description">
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-						<br />
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-
-					</p>
-				</div> -->
 				<div class="row">
-					<div class="col-lg-3 col-md-6">
+					<div class="col-lg-12">
 						<div class="member">
-							<div class="pic"><img src="img/9a9cd61d-4a3e-4359-b6b9-9de5ee34fc69.png" alt=""></div>
-
-						</div>
-					</div>
-
-					<div class="col-lg-3 col-md-6">
-						<div class="member">
-							<div class="pic"><img src="img/9a9cd61d-4a3e-4359-b6b9-9de5ee34fc69.png" alt=""></div>
-
-						</div>
-					</div>
-
-					<div class="col-lg-3 col-md-6">
-						<div class="member">
-							<div class="pic"><img src="img/a2d9cce9-fd2f-4c03-b01b-05c4e22b3e2e.png" alt=""></div>
-
-						</div>
-					</div>
-
-					<div class="col-lg-3 col-md-6">
-						<div class="member">
-							<div class="pic"><img src="img/a2d9cce9-fd2f-4c03-b01b-05c4e22b3e2e.png" alt=""></div>
+							<div class="pic"><a href="masha.html"><img src="img/Masha x H2H.png" alt=""></a></div>
 						</div>
 					</div>
 				</div>
