resize masha support banner

--- a/index.html
+++ b/index.html
@@ -130,11 +130,10 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="member">
-							<div class="pic"><a href="masha.html"><img src="img/Masha x H2H.png" alt=""></a></div>
+							<a href="masha.html"><img src="img/Masha x H2H.png" alt="" style="width: 100%"></a>
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</section>
 		<section id="facts">
