update social links in contact

--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,9 @@
 
 						</div>
 						<div class="social-links" style="text-align: center">
-							<span href="#" class="facebook"><i class="fa fa-facebook"></i></span>
-							<span href="#" class="instagram"><i class="fa fa-instagram"></i></span>
+							<a href="http://facebook.com/mashaesthetics"><span href="#" class="facebook"><i class="fa fa-facebook"></i></span></a>
+							<a href="http://instagram.com/mashaesthetics"><span href="#" class="instagram"><i class="fa fa-instagram"></i></span></a>
+							<a href="https://linkedin.com/company/masha-art/"><span href="#" class="linkedin"><i class="fa fa-linkedin"></i></span></a>
 						</div>
 
 					</div>
