--- a/contact.html
+++ b/contact.html
@@ -69,19 +69,12 @@
 
 						</div>
 						<div class="social-links" style="text-align: center">
-							<a href="http://facebook.com/mashaesthetics"><span href="#" class="facebook"><i class="fa fa-facebook"></i></span></a>
-							<a href="http://instagram.com/mashaesthetics"><span href="#" class="instagram"><i class="fa fa-instagram"></i></span></a>
-							<a href="https://linkedin.com/company/masha-art/"><span href="#" class="linkedin"><i class="fa fa-linkedin"></i></span></a>
+							<a href="http://facebook.com/mashaesthetics" style="color: #333; display: inline;" onmouseover="this.style='color: black; display:inline;'"><span href="#" class="facebook"><i class="fa fa-facebook"></i></span></a>
+							<a href="http://instagram.com/mashaesthetics" style="color: #333; display: inline;" onmouseover="this.style='color: black; display:inline;'"><span href="#" class="instagram"><i class="fa fa-instagram"></i></span></a>
+							<a href="https://linkedin.com/company/masha-art/" style="color: #333; display: inline;" onmouseover="this.style='color: black; display:inline;'"><span href="#" class="linkedin"><i class="fa fa-linkedin"></i></span></a>
 						</div>
-
 					</div>
-
-
-
-
 				</div>
-
-
 			</div>
 		</section>
 
