restyle custom slider

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -187,17 +187,14 @@
 				<!-- Custom slider -->
 				<div class="container">
 					<div class="gallery-slider">
-						
-						<div class="col-sm-1 text-center gallery-slider-control control-left">
-							<i class="fa fa-chevron-left"></i>
-						</div>
-						<div class="gallery-slider-wrapper col-sm-10">
+						<div class="gallery-slider-wrapper col-sm-12">
 							<div class="gallery-slider-inner">
 							</div>
+
+							<span class="gallery-slider-control control-left"><i class="fa fa-chevron-left"></i></span>
+							<span class="gallery-slider-control control-right"><i class="fa fa-chevron-right"></i></span>
 						</div>
-						<div class="col-sm-1 text-center gallery-slider-control control-right">
-							<i class="fa fa-chevron-right"></i>
-						</div>
+							
 
 					</div>
 				</div>
