attach touch listener to gallery slider

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="member">
-							<a href="masha.html"><img src="img/Masha x H2H.png" alt="" style="width: 100%"></a>
+							<a href="masha.html"><img src="img/Masha x H2H.png" alt="" style="width: 100%;"></a>
 						</div>
 					</div>
 				</div>
