stop automatic cycle of main carousel

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<section id="hero">
 		<div class="hero-container">
-			<div id="myCarousel" class="carousel slide" data-ride="carousel" data-touch="true">
+			<div id="myCarousel" class="carousel slide" data-ride="carousel" data-touch="true" data-interval="false">
 				<!-- Indicators -->
 				<ol class="carousel-indicators">
 				</ol>
