--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 	<script src="lib/jquery/jquery.min.js"></script>
 	<script src="lib/jquery/jquery-migrate.min.js"></script>
-	<script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="lib/bootstrap/js/bootstrap.js"></script>
 	<script src="lib/easing/easing.min.js"></script>
 	<script src="lib/wow/wow.min.js"></script>
 	<script src="lib/waypoints/waypoints.min.js"></script>
@@ -185,7 +185,6 @@
 	<script src="lib/superfish/hoverIntent.js"></script>
 	<script src="lib/superfish/superfish.min.js"></script>
 	<script src="contactform/contactform.js"></script>
-	<script src="js/jquery.bcSwipe.js"></script>
 	<script src="js/main.js"></script>
 	<script>
 
