--- a/Gallery.html
+++ b/Gallery.html
@@ -73,9 +73,9 @@
 					</ul>
 				</div>
 
-				<div  class="row flex" style="display: none;" id="allArtistsContainer">
+				<div  class="row flex" style="display: none; align-items: center;" id="allArtistsContainer">
 					<div class="col-sm-3">
-						<h3 style="position:relative; top:50%;">All Artists</h3>
+						<h3 >All Artists</h3>
 					</div>
 					<div class="col-sm-9" id="allArtistsContainer_wrapper">
 	
