--- a/eventdetail.html
+++ b/eventdetail.html
@@ -297,6 +297,14 @@
 
 	</script>
 
+	<style>
+		.gallery-slider-inner img {
+			height: 200px;
+			max-width: 100%;
+			padding: 0px 5px;
+		}
+	</style>
+
 </body>
 
 </html>
