--- a/inmedia.html
+++ b/inmedia.html
@@ -174,9 +174,7 @@
 				// }
 				data.forEach(element => {
 					$("#inmedia-content").append(`
-						<div class="col-sm-12">
-							<img 	src=${URLBuilder.inmediaURL()}/${element.thumbnail.replace(" ", "%20")}>
-						</div>
+						<img 	src=${URLBuilder.inmediaURL()}/${element.thumbnail.replace(" ", "%20")}>
 					`);
 				});
 			});
@@ -185,7 +183,7 @@
 
 	<style>
 		#inmedia-content img {
-			max-width: 100%;
+			max-width: 300px;
 			height: 300px;
 			margin: auto;
 			box-shadow: 3px 3px 3px 3px #3333;
