animate inmedia images

--- a/inmedia.html
+++ b/inmedia.html
@@ -187,6 +187,12 @@
 			height: 300px;
 			margin: auto;
 			box-shadow: 3px 3px 3px 3px #3333;
+			position: relative;
+			transition-duration: 1ms;
+		}
+
+		#inmedia-content img:hover {
+			top: -10px;
 		}
 	</style>
 </body>
