animate gallery images

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -302,6 +302,12 @@
 			height: 200px;
 			max-width: 100%;
 			padding: 0px 5px;
+			position: relative;
+			transition-duration: 1ms;
+		}
+
+		.gallery-slider-inner img:hover {
+			top: -10px;
 		}
 	</style>
 
