change tranition durations

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -303,7 +303,7 @@
 			max-width: 100%;
 			padding: 0px 5px;
 			position: relative;
-			transition-duration: 1ms;
+			transition-duration: 0.5s;
 		}
 
 		.gallery-slider-inner img:hover {
