--- a/inmedia.html
+++ b/inmedia.html
@@ -188,7 +188,7 @@
 			margin: auto;
 			box-shadow: 3px 3px 3px 3px #3333;
 			position: relative;
-			transition-duration: 1ms;
+			transition-duration: 0.5s;
 		}
 
 		#inmedia-content img:hover {
