--- a/eventdetail.html
+++ b/eventdetail.html
@@ -191,8 +191,8 @@
 							<div class="gallery-slider-inner">
 							</div>
 							<div class="gallery-slider-control">
-								<span class="control-left"><i class="fa fa-chevron-left"></i></span>
-								<span class="control-right"><i class="fa fa-chevron-right"></i></span>
+								<span class="control-left"><i class="fa fa-chevron-left" style="font-size: 24px;"></i></span>
+								<span class="control-right"><i class="fa fa-chevron-right" style="font-size: 24px;"></i></span>
 							</div>
 						</div>
 					</div>
