--- a/Gallery.html
+++ b/Gallery.html
@@ -75,7 +75,7 @@
 
 				<div  class="row flex" style="display: none; align-items: center;" id="allArtistsContainer">
 					<div class="col-sm-3">
-						<h3 >All Artists</h3>
+						<h3 ><b>All Artists</b></h3>
 					</div>
 					<div class="col-sm-9" id="allArtistsContainer_wrapper">
 	
