--- a/eventdetail.html
+++ b/eventdetail.html
@@ -304,6 +304,7 @@
 			padding: 0px 5px;
 			position: relative;
 			transition-duration: 0.5s;
+			top: 0;
 		}
 
 		.gallery-slider-inner img:hover {
