--- a/inmedia.html
+++ b/inmedia.html
@@ -160,6 +160,7 @@
 			box-shadow: 3px 3px 3px 3px #3333;
 			position: relative;
 			transition-duration: 0.5s;
+			top: 0;
 		}
 
 		#inmedia-content img:hover {
