--- a/inmedia.html
+++ b/inmedia.html
@@ -186,12 +186,13 @@
 			position: absolute;
 			left: 0;
 			top: 0;
-			width: 100%;
-			height: 100%;
+			width: 100vw;
+			height: 100vw;
+			text-align: center;
+			z-index: 1000;
 		}
 
 		#media-viewer img {
-			margin: auto;
 			width: 90%;
 			max-height: 90%;
 
