--- a/inmedia.html
+++ b/inmedia.html
@@ -183,13 +183,15 @@
 
 		#media-viewer {
 			background-color: rgba(255, 255, 255, 0.13);
-			position: absolute;
+			position: fixed;
 			left: 0;
 			top: 0;
 			width: 100vw;
-			height: 100vw;
+			height: 100vh;
 			text-align: center;
 			z-index: 1000;
+			display: flex;
+			align-items: center;
 		}
 
 		#media-viewer img {
