--- a/inmedia.html
+++ b/inmedia.html
@@ -182,13 +182,13 @@
 		}
 
 		#media-viewer {
-			background-color: rgba(255, 255, 255, 0.13);
+			background-color: rgba(0, 0, 0, 0.13);
 			position: fixed;
 			left: 0;
 			top: 0;
 			width: 100vw;
 			height: 100vh;
-			text-align: center;
+			justify-content: center;
 			z-index: 1000;
 			display: flex;
 			align-items: center;
