remove media-viewer animation

--- a/inmedia.html
+++ b/inmedia.html
@@ -156,7 +156,7 @@
 			});
 
 			$("#inmedia-content").on("click", "img", (ev) => {
-				$("#media-viewer").show("slow");
+				$("#media-viewer").show();
 				$("#media-viewer img").attr("src", $(ev.target).attr("src"));
 			});
 
