remove underline for contact US

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div style="text-align: center;margin-top:80px;">
-							<h2 style="text-decoration-line:underline"><b>Contact Us</b></h2>
+							<h2><b>Contact Us</b></h2>
 							<span><b>Email</b></span><br />
 							<span>info@mashaart.in</span><br />
 							<br />
