--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="member">
-							<a href="masha.html"><img src="img/Masha x H2H.png" alt="" style="width: 100%;"></a>
+							<div style="display: flex; height: 400px; justify-content: center; overflow: hidden;">
+								<a href="masha.html"><img src="img/Masha x H2H.png" alt="" style="width: 100vw; flex: none;"></a>
+							</div>
 						</div>
 					</div>
 				</div>
