--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="member">
-							<div style="display: flex; justify-content: center; overflow: hidden;">
+							<div style="display: flex; justify-content: center;">
 								<a href="masha.html"><img src="img/Masha x H2H.png" alt="" style="width: 100vw; flex: none;"></a>
 							</div>
 						</div>
