--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
 					<div class="col-lg-12">
 						<div class="member">
 							<div style="display: flex; justify-content: center;">
-								<a href="masha.html"><img src="img/Masha x H2H.png" alt="" style="width: 100vw; flex: none;"></a>
+								<a href="masha.html"><img src="img/Masha x H2H.png" alt=""
+										style="width: 100vw; flex: none;"></a>
 							</div>
 						</div>
 					</div>
@@ -304,6 +305,15 @@
 			`);
 		}
 	</script>
+	<style>
+		#header #logo .title {
+			display: none;
+		}
+
+		#header.header-fixed #logo .title {
+			display: inline;
+		}
+	</style>
 </body>
 
 </html>
