add header to index

--- a/index.html
+++ b/index.html
@@ -309,9 +309,10 @@
 		#header #logo .title {
 			display: none;
 		}
-
-		#header.header-fixed #logo .title {
-			display: inline;
+		@media (max-width: 992px){
+			#header.header-fixed #logo .title {
+				display: inline;
+			}
 		}
 	</style>
 </body>
